ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mysite-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
    # traefik.ingress.kubernetes.io/app-root: "/index.html"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mysite-nginx-service
          servicePort: 80
      # - path: /site
      #   backend:
      #     serviceName: mysite-nginx-service
      #     servicePort: 80          
      - path: /dog
        backend:
          serviceName: mydog-nginx-service
          servicePort: 80
      # - path: /pihole
      #   backend:
      #     serviceName: pihole-nginx-service
      #     servicePort: 80
      # - path: /admin
      #   backend:
      #     serviceName: admin-nginx-service
      #     servicePort: 8080
